run latest version of aeron media driver from Maven